header gap fixed

--- a/src/styles/components/ui/MatchesInfo.module.css
+++ b/src/styles/components/ui/MatchesInfo.module.css
@@ -19,7 +19,7 @@
 
 .matchesOptions {
     display: flex;
-    gap: 10px;
+    gap: 15px;
 }
 
 .matchesOptions button {
